--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "json-pretty-html": "^1.1.6",
     "morgan": "~1.9.1",
     "ttn": "git+https://github.com/TheThingsNetwork/node-app-sdk.git"
   }
