--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "json-pretty-html": "^1.1.6",
+    "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "ttn": "git+https://github.com/TheThingsNetwork/node-app-sdk.git"
   }
